--- a/configs.json
+++ b/configs.json
@@ -1,8 +1,8 @@
 {
   "versions": {
-    "select-forms": "1.0"
+    "select-forms": "1.1"
   },
   "changelogs": {
-    "select-forms": "1. Изменены формы подачи\n2. Добавлены новые формы\n3. Исправление багов\n4. Множество исправлений ошибок и недочётов\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "1. Исправлениеошибок\n2. ...\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   }
 }
