--- a/configs.json
+++ b/configs.json
@@ -1,8 +1,8 @@
 {
   "versions": {
-    "select-forms": "1.1"
+    "select-forms": "2.0"
   },
   "changelogs": {
-    "select-forms": "1. Исправлениеошибок\n2. ...\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "1. Исправление ошибок\n2. Фикс недочётов плагина\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   }
 }
