--- a/configs.json
+++ b/configs.json
@@ -1,8 +1,8 @@
 {
   "versions": {
-    "select-forms": "2.1"
+    "select-forms": "2.2"
   },
   "changelogs": {
-    "select-forms": "1. Исправление ошибок в программном коде\n 2. Фикс недочётов плагина\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "1. Исправили баг с обновлениями плагина\n2. Добавили новые команды\n3. Добавлена возможность кастомных форм (БЕТА)\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   }
 }
