--- a/configs.json
+++ b/configs.json
@@ -1,8 +1,8 @@
 {
   "versions": {
-    "select-forms": "2.3"
+    "select-forms": "2.4"
   },
   "changelogs": {
-    "select-forms": "1. Исправили баг с обновлениями плагина\n2. Добавили новые команды\n3. Добавлена возможность кастомных форм (БЕТА)\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "1. Обновили версию т.к. better и discord обновились\n2. - \n3. - \n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   }
 }
