--- a/configs.json
+++ b/configs.json
@@ -3,6 +3,17 @@
     "select-forms": "2.4"
   },
   "changelogs": {
-    "select-forms": "1. Обновили версию т.к. better и discord обновились\n2. - \n3. - \n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
-  }
+    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки"
+  },
+
+  "select-forms": [
+    {
+      "versions": "1.5.2",
+      "changelogs": "1. Добавлена возможность выбора меток"
+    },
+    {
+      "versions": "2.4",
+      "changelogs": "1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки"
+    }
+  ]
 }
