--- a/configs.json
+++ b/configs.json
@@ -3,7 +3,7 @@
     "select-forms": "2.4"
   },
   "changelogs": {
-    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки"
+    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки \n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   },
 
   "select-forms": [
