--- a/configs.json
+++ b/configs.json
@@ -1,9 +1,9 @@
 {
   "versions": {
-    "select-forms": "2.6"
+    "select-forms": "2.7"
   },
   "changelogs": {
-    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки\n5. Пофиксили баги форм\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Исправили баги и недочетами форм\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
   },
 
   "select-forms": [
@@ -12,8 +12,8 @@
       "changelogs": "1. Добавлена возможность выбора меток"
     },
     {
-      "versions": "2.6",
-      "changelogs": "1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки\n5. Пофиксили баги форм"
+      "versions": "2.7",
+      "changelogs": "1. Исправили баги и недочетами форм"
     }
   ]
 }
