--- a/configs.json
+++ b/configs.json
@@ -1,9 +1,9 @@
 {
   "versions": {
-    "select-forms": "2.8"
+    "select-forms": "1.6.2"
   },
   "changelogs": {
-    "select-forms": "0. **Рекомендуется, обновиться для избежания дальнейших проблем!!!**\n1. Исправили баги и недочетами форм\n\n### Важно! Если какие-то проблемы, пожалуйста обратитесь к @geront"
+    "select-forms": "1. Исправлены ошибки с формами\n2. Теперь, при выборе определенных форм, вводить информацию нужно прямо в окне!\n>**Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
   },
 
   "select-forms": [
@@ -12,8 +12,16 @@
       "changelogs": "1. Добавлена возможность выбора меток"
     },
     {
-      "versions": "2.8",
-      "changelogs": "1. Исправили баги и недочетами форм"
+      "versions": "1.6",
+      "changelogs": "1. Полная переработка системы обновления\n2. Ура! Кастомные формы - теперь доступны всем\n3. Добавлена возможность скрытие данного окна, при заходе в дискорд (проверь настройки)\n4. Исправленые критические ошибки"
+    },
+    {
+      "versions": "1.6.1",
+      "changelogs": "1. Исправлены ошибки с формами\n2. Теперь, при выборе определенных форм, вводить информацию нужно прямо в окне!\n>**Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
+    },
+    {
+      "versions": "1.6.2",
+      "changelogs": "1. Исправление мелких ошибок\n\n> **Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
     }
   ]
 }
