--- a/configs.json
+++ b/configs.json
@@ -4,5 +4,10 @@
   },
   "changelogs": {
     "select-forms": "1. Исправлены ошибки с формами\n2. Теперь, при выборе определенных форм, вводить информацию нужно прямо в окне!\n>**Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
-  }
+  },
+
+  "versions": "1.6.2",
+      "changelogs": "1. Исправление мелких ошибок\n\n> **Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
+    }
+  ]
 }
