--- a/configs.json
+++ b/configs.json
@@ -1,9 +1,9 @@
 {
   "versions": {
-    "select-forms": "1.6.2"
+    "select-forms": "1.6.3"
   },
   "changelogs": {
-    "select-forms": "1. Исправлены ошибки с формами\n2. Теперь, при выборе определенных форм, вводить информацию нужно прямо в окне!\n>**Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
+    "select-forms": "1. Исправление мелких багов\n2. Теперь, при выборе определенных форм, вводить информацию нужно прямо в окне!\n>**Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
   },
 
   "select-forms": [
@@ -22,6 +22,10 @@
     {
       "versions": "1.6.2",
       "changelogs": "1. Исправление мелких ошибок\n\n> **Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
+    },
+    {
+      "versions": "1.6.3",
+      "changelogs": "1. Исправление мелких багов\n\n> **Последующий нововведений не планируется, будут в основном исправления ошибок, возможно когда-то, но шансы маленькие**"
     }
   ]
 }
